--- a/video-processing-service/package.json
+++ b/video-processing-service/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google-cloud/storage": "^7.13.0",
     "express": "^4.21.0",
     "fluent-ffmpeg": "^2.1.3"
   },
